--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="container">
   <header>
-    Header
-  </header>
+    <a href=""> Logo </a> 
+    <a href=""> About </a> 
+    <a href=""> Mission </a> 
+    <a href=""> Project </a> 
+  </header> 
   <main>
-    Main Content
+      <div class="box">
+        Main Content
+      </div>
   </main>
   <aside>
     Aside
@@ -20,6 +25,6 @@
   <footer>
     Footer
   </footer>
-  
+</div>
 </body>
 </html>
